--- a/views/members.ejs
+++ b/views/members.ejs
@@ -9,6 +9,13 @@
       <li><a href="/members/<%= member.id %>"><%= member.name %></a></li>
     <% }) %>
   </ul>
+
+  <section class="in-memory-of">
+    <h2>In Memory Of</h2>
+    <img src="/images/tony.png" alt="Tony" width="200">
+    <p>In memory of our dear friend Tony,</p>
+    <p>"Without you, our gaming adventures would not have been the same. Your creative genius and boundless enthusiasm have brought joy and excitement to our gaming sessions. You were a guiding force behind our shared experiences, and we owe many of our cherished gaming memories to your passion and dedication."</p>
+  </section>
 </main>
 
 <%- include('partials/footer') %>
