--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <p>&copy; 2024 32Gamers Club. All rights reserved.</p>
+    <p>&copy; 2024 32Gamers. All rights reserved.</p>
   </footer>
   
   <script src="/js/script.js"></script>
