--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,9 @@
 <%- include('partials/nav') %>
 
 <header>
-  <h1>Welcome to 32Gamers Club</h1>
+  <h1>Welcome to the home of 32Gamers</h1>
   <img src="/images/logo.png" alt="32Gamers Club Logo" width="200">
-  <p>Join our community of passionate gamers!</p>
+  <p>Meet our community of passionate gamers!</p>
 </header>
 
 <main>
